test/negative/constructor_arity2.mli.expected

*******************************
********** Parsed file ********
*******************************
type t =
  | C of int * int 
val f : int -> t -> unit[@@gospel
                          {| f n t
    requires match t with
             | C (_,_,_)
             | _ -> true |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t =
| C of int * int 
  

val f : int -> t -> unit
(*@  f n t
    requires ...
     *)
File "constructor_arity2.mli", line 6, characters 15-24:
Error: Function C expects 2 arguments as opposed to 3
